--- a/index.html
+++ b/index.html
@@ -151,6 +151,89 @@
         </div>
       </div>
     </section>
+    <div class="accordion">
+      <div class="container">
+        <div class="accordion__inner">
+          <div class="accordion__item">
+            <div class="accordion__triger flex-base">
+              <p class="accordion__triger-caption caption">DESCRIPTION</p>
+              <p class="accordion__triger-text">
+                Gris Dior is the olfactory expression of gray, the iconic color of the House of Dior that embodies the bold spirit of Christian Dior.
+              </p>
+            </div>
+            <div class="accordion__content">
+              <p>A unisex eau de parfum that defies gender, Gris Dior is an intense chypre fragrance that makes a strong, recognizable statement, a fragrance you adopt and interpret to suit your own rules.Gris Dior uninhibitedly combines heritage with a modern twist and plays the unisex card with confidence. It is multifaceted and not as obvious as it seems, like the color gray, richly nuanced with its subtleties, anything but a simple mix of black and white.Last but not least, Gris Dior is an encounter between floral and woody notes that shape the outline of what has become an iconic chypre trail.The Gris Dior bottle and cardboard packaging are recyclable (only in areas with appropriate recycling facilities).
+              </p>
+            </div>
+          </div>
+
+          <div class="accordion__item">
+            <div class="accordion__triger flex-base">
+              <p class="accordion__triger-caption caption">PERFUMER'S WORD</p>
+              <p class="accordion__triger-text">
+                What if the Dior gray were a fragrance? This emphatic gray is not merely a mix of black and white, but the result of a chromatic blend.
+              </p>
+            </div>
+            <div class="accordion__content">
+              <p>This profusion of colours inspired a composition that melds Jasmine and Bergamot with notes of humid undergrowth. Colour is transformed into an emblematic fragrance. Its lively scent is multifaceted and effortlessly elegant.
+              </p>
+            </div>
+          </div>
+
+          <div class="accordion__item">
+            <div class="accordion__triger flex-base">
+              <p class="accordion__triger-caption caption">APPLICATION TIPS</p>
+              <p class="accordion__triger-text">
+                Spray Gris Dior on pulse points: neck and wrists.
+              </p>
+            </div>
+            <div class="accordion__content">
+              <p>Ideally reveals the aroma of perfume is the neck and wrists! Thanks to this, you will forever be remembered by all the people around you.
+              </p>
+            </div>
+          </div>
+
+          <div class="accordion__item">
+            <div class="accordion__triger flex-base">
+              <p class="accordion__triger-caption caption">INGREDIENTS</p>
+              <p class="accordion__triger-text">
+              </p>
+            </div>
+            <div class="accordion__content">
+              <p>#16060 ALCOHOL • PARFUM (FRAGRANCE) • AQUA (WATER) • ALPHA-ISOMETHYL IONONE • BENZYL SALICYLATE • LIMONENE • LINALOOL • ETHYLHEXYL METHOXYCINNAMATE • DIETHYLAMINO HYDROXYBENZOYL HEXYL BENZOATE • CITRONELLOL • GERANIOL • BHT • EVERNIA PRUNASTRI (OAKMOSS) EXTRACT • CITRAL • BENZYL ALCOHOL • EUGENOL • BENZYL BENZOATE • FARNESOL • TOCOPHEROL • CI 60730 (EXT. VIOLET 2) • CI 14700 (RED 4) • CI 19140 (YELLOW 5)
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <section class="else">
+      <div class="container">
+        <div class="else__inner">
+          <h2 class="else__subtitle subtitle">WHAT ELSE?</h2>
+          <div class="else__items  flex-base">
+            <div class="else__item">
+              <p class="else__item-step">01 INITIATE THE OLFACTORY RITUAL</p>
+              <img class="else__item-img" src="assets/img/else-1.jpg" alt="Hand and Body Lotion">
+              <p class="else__item-name"><span>GRIS DIOR</span>Hand and Body Lotion</p>
+              <p class="else__item-price subtitle">87€</p>
+            </div>
+            <div class="else__item">
+              <p class="else__item-step">02 CONTINUE THE RITUAL</p>
+              <img class="else__item-img" src="assets/img/else-2.jpg" alt="Unisex Eau de Parfum">
+              <p class="else__item-name"><span>GRIS DIOR</span>Unisex Eau de Parfum </p>
+              <p class="else__item-price subtitle">265€</p>
+            </div>
+            <div class="else__item">
+              <p class="else__item-step">03 ADD THE FINISHING TOUCH</p>
+              <img class="else__item-img" src="assets/img/else-3.jpg" alt="Hair Perfume">
+              <p class="else__item-name"><span>GRIS DIOR</span>Hair Perfume</p>
+              <p class="else__item-price subtitle">102€</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
