--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:description"
     content="With Gris Dior you dare to reveal your most surprising, mysterious and unexpected facets."
     data-meta-dynamic="true">
-  <meta property="og:image" content=".." data-meta-dynamic="true">
+  <meta property="og:image" content="assets/img/img/video-bg.jpg" data-meta-dynamic="true">
   <link rel="stylesheet" href="assets/css/reset.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="assets/css/style.css">
@@ -53,7 +53,7 @@
           <div class="swiper-slide hero-slide">
             <div class="container">
               <div class="hero-slide__inner flex-base">
-                <img src="assets/img/slider-hero/slider-1-1.jpg" alt="Gris Dior fragrance">
+                <img class="hero-slide__img-one" src="assets/img/slider-hero/slider-1-1.jpg" alt="Gris Dior fragrance">
                 <div class="hero-slide__content">
                   <h1 class="hero-slide__content-title title">GRIS DIOR</h1>
                   <p class="hero-slide__content-caption caption">Fragrance</p>
@@ -61,7 +61,7 @@
                     and unexpected facets.</p>
                   <a class="hero-slide__content-btn btn" href="#">DISCOVER</a>
                 </div>
-                <img src="assets/img/slider-hero/slider-1-2.jpg" alt="Jenna Ortega with Gris Dior fragrance">
+                <img class="hero-slide__img-two" src="assets/img/slider-hero/slider-1-2.jpg" alt="Jenna Ortega with Gris Dior fragrance">
               </div>
             </div>
           </div>
@@ -258,7 +258,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> 
     <div class="video">
       <div class="container">
         <div class="video__box flex">
@@ -267,10 +267,11 @@
         </div>
       </div>
     </div>
+      </main>
     <footer class="footer">
       <div class="container">
         <div class="footer__top flex-base">
-          <a class="footer__logo" href="#"><img class="header__logo" src="assets/img/logo.svg" alt="Dior"></a>
+          <a class="footer__logo" href="#"><img class="footer__logo-img" src="assets/img/logo.svg" alt="Dior"></a>
           <img class="footer__img" src="assets/img/footer-img.jpg" alt="purple flower">
           <div class="footer__items">
             <div class="footer__item">
@@ -326,7 +327,7 @@
         </div>
       </div>
     </footer>
-  </main>
+
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script src="assets/js/script.js"></script>
